--- a/package.json
+++ b/package.json
@@ -8,15 +8,24 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
-    "vue": "^2.6.6"
+    "element-ui": "^2.6.3",
+    "fabric": "^2.7.0",
+    "file-saver": "^2.0.1",
+    "jsdom": "^14.0.0",
+    "vue": "^2.6.6",
+    "vuescroll": "^4.11.2",
+    "x2js": "^3.2.6"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "^3.4.1",
     "@vue/cli-plugin-eslint": "^3.4.1",
     "@vue/cli-service": "^3.4.1",
     "babel-eslint": "^10.0.1",
+    "babel-plugin-component": "^1.1.1",
     "eslint": "^5.8.0",
     "eslint-plugin-vue": "^5.0.0",
+    "node-sass": "^4.11.0",
+    "sass-loader": "^7.1.0",
     "vue-template-compiler": "^2.5.21"
   },
   "babel": {
